# 2026-SMH

./: .dockerignore  .gitignore  BOARD.md  Dockerfile  README.md  check_i2c.py  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
config/: lane_control.yaml  lane_vision.yaml  main_planner.real_car.yaml  main_planner.yaml  vehicle_config.lane_view.yaml  vehicle_config.mask_check.yaml  vehicle_config.yaml
docs/: ANNOUNCEMENT.md  README.md  board-freeze-control.md  board-latency-and-sim2real.md  board-workflow.md  collaboration.md  competition.md  control-hybrid-strategy.md  control-tuning-roadmap.md  dev-environment.md  fork-moment-detection.md  fork-test-pipeline.md  hardware-board.md  hardware-camera.md  hsv-profiles.md  lane-drive-strategy.md  lane-driving.md  lane-occlusion-fork-strategy.md  lane-perception-topic.md  lane-perception.md  main-planner.md  out-ego-fork-shape.md  out-route-reference.md  references.md  roles.md  running.md  setup.md  simulation-setup.md  simulation.md  vehicle-geometry.md
patches/: README.md  apply_camera_quiet_logs.py  apply_monitor_bev_labels.py  camera-native-caps.patch  camera-v4l2-controls.patch  control-steer-invert.patch
scripts/: board_init_workspace.sh  board_monitor_term.py  board_race_sync.sh  board_sync.sh  board_test.sh  build_full_in_course.py  check_sign_topic.py  check_sign_webcam.py  check_sim_gpu.sh  check_sim_rviz.sh  check_traffic_light_ab.py  dev_container.sh  export_out_reference_segments.py  extract_in_roundabout_waypoints.py  extract_out_best_waypoints.py  init_workspace.sh  prepare_bev_calib_mat.py  prepare_mission_signs.py  quantize_sign_light.py  refine_full_in_centerline.py  rt_wrap.sh  sign_view_web.py  sim_gpu_env.sh  teleport_spawn_pose.py  verify_sim.sh  (+2 more)
src/dracer_sim/: README.md  package.xml  setup.cfg  setup.py
src/dracer_sim/config/: battery_stub.yaml  bev_calib_mat.yaml  bev_preview.yaml  camera_preview.yaml  camera_republish.yaml  control_bridge.yaml  mission_signs.yaml  sim_interface.yaml  spawn_poses.yaml  track_plane.yaml
src/dracer_sim/dracer_sim/: battery_stub.py  bev_preview.py  camera_preview.py  camera_republish.py  control_bridge.py  control_mapping.py  joystick_bridge.py  robot_description_publisher.py
src/dracer_sim/launch/: sim_auto_driving.launch.py  sim_auto_stack.launch.py  sim_bringup.launch.py  sim_manual_driving.launch.py
src/dracer_sim/models/aruco_stop_sign/: model.config  model.sdf
src/dracer_sim/models/aruco_stop_sign/materials/scripts/: sign.material
src/dracer_sim/models/bev_calib_mat/: model.config  model.sdf
src/dracer_sim/models/bev_calib_mat/materials/scripts/: calib.material
src/dracer_sim/models/track_plane/: model.config  model.sdf
src/dracer_sim/models/track_plane/materials/scripts/: track.material
src/dracer_sim/models/turn_sign_left/: model.config  model.sdf
src/dracer_sim/models/turn_sign_left/materials/scripts/: sign.material
src/dracer_sim/models/turn_sign_right/: model.config  model.sdf
src/dracer_sim/models/turn_sign_right/materials/scripts/: sign.material
src/dracer_sim/rviz/: sim_camera.rviz
src/dracer_sim/test/: test_control_bridge.py
src/dracer_sim/urdf/: dracer_sim.urdf  limo_dracer_sim.xacro
src/dracer_sim/worlds/: track_cw.world
src/driving/: package.xml  setup.py
src/driving/driving/: control_node.py  lane_drive_node.py  types.py
src/driving/driving/planner/: lane_controller.py  lane_planner.py  mission.py  path_select.py
src/driving/launch/: lane_drive.launch.py
src/driving/test/: test_lane_controller.py  test_mission.py
src/inference/: package.xml  pytest.ini  setup.py
src/inference/inference/: __init__.py  hsv_mask_web_node.py  inference_node.py  lane_adapters.py  lane_control_node.py  lane_preview_node.py  lane_view_web_node.py  pipeline.py  types.py
src/inference/inference/modules/: __init__.py  active_lane.py  aruco_detection.py  aruco_stop.py  direction_sign.py  lane_detection.py  lane_planner.py  metric_bev.py  roundabout.py  sign_light.py  traffic_sign.py
src/inference/inference/modules/aruco/: __init__.py  detector.py  stop_logic.py
src/inference/inference/modules/direction_sign/: __init__.py  detector.py
src/inference/inference/modules/perception/: __init__.py  types.py
src/inference/inference/modules/perception/blob/: __init__.py  centerline.py  corridor.py  detect.py  masks.py  morph_blob.py  rail_corridor.py
src/inference/inference/modules/perception/fork/: README.md  __init__.py  adapter.py  capture.py  ego_shape.py  judgment.py  moment.py
src/inference/inference/modules/perception/legacy/: README.md  __init__.py  lane_detection.py
src/inference/inference/modules/trafficsign/: README.md  __init__.py  color_detector.py  debounce.py  yolo_light.py
src/inference/launch/: auto_driving.launch.py  debug_monitor.launch.py  lane_perception.launch.py  lane_view.launch.py  manual_driving.launch.py  mask_check.launch.py
src/inference/test/: README.md  check_direction_sign_topic.py  check_traffic_light_control.py  check_traffic_sign_topic.py  check_traffic_sign_video.py  check_traffic_sign_webcam.py  conftest.py  test_active_lane.py  test_aruco.py  test_aruco_stop.py  test_compose_road_raw.py  test_direction_sign.py  test_fork_judgment.py  test_fork_lane_pairs.py  test_fork_moment.py  test_lane_adapters.py  test_lane_debug.py  test_lane_detection.py  test_lane_planner.py  test_main_planner.py  test_sign_light.py  test_traffic_sign.py  tune_traffic_sign_video.py
src/inference/test/integration/: test_lane_adapters.py
src/inference/test/manual/: check_traffic_light_control.py  check_traffic_sign_topic.py  check_traffic_sign_video.py  check_traffic_sign_webcam.py  tune_traffic_sign_video.py
src/inference/test/unit/aruco/: test_aruco.py
src/inference/test/unit/perception/blob/: test_rail_corridor.py
src/inference/test/unit/perception/fork/: test_judgment.py
src/inference/test/unit/planner/: test_active_lane.py  test_lane_planner.py  test_main_planner.py
src/inference/test/unit/signs/: test_direction_sign.py  test_traffic_sign.py
(+155 files in other folders)
