<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inference</name>
  <version>0.1.0</version>
  <description>인지 계층: 카메라 영상 → 차선/표지 인지 → LaneDetections 발행 (통합 launch 포함)</description>
  <maintainer email="inha.aim.01@gmail.com">SMH Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>lane_msgs</exec_depend>
  <!-- driving 에 대한 의존은 두지 않는다: 의존 방향은 driving→inference (제어가
       인지를 import). 여기 exec_depend 를 두면 순환이 되어 colcon 빌드 불가.
       auto_driving.launch 가 driving 노드를 띄우지만 오버레이에 함께 소싱되므로 OK. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
